Fixes bug #73194, when profile switching occurs, ensure new cache directory is created. r=beard, sr=darin